--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,12 @@
         <groupId>org.seleniumhq.selenium</groupId>
         <artifactId>htmlunit-driver</artifactId>
         <version>2.27</version>
-    </dependency> 
+    </dependency>
+    <dependency>
+    <groupId>log4j</groupId>
+    <artifactId>log4j</artifactId>
+    <version>1.2.17</version>
+</dependency>
    </dependencies>
   
 </project>
