--- a/pom.xml
+++ b/pom.xml
@@ -53,17 +53,19 @@
 			<version>3.6.0</version>
 		</dependency>
 
-		<dependency>
+		<!--dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-firefox-driver</artifactId>
 			<version>3.6.0</version>
-		</dependency>
+		</dependency-->
 
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>htmlunit-driver</artifactId>
 			<version>2.27</version>
 		</dependency>
+
+		
 
 		<dependency>
 			<groupId>log4j</groupId>
